# wgpu_instancing

./: Cargo.toml
src/: camera.rs  compute_kernel.wgsl  main.rs  shader.wgsl  state.rs  vertex.rs
