[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
memoffset = "0.9.0"
pollster = "0.3.0"
thiserror = "1.0.48"
wgpu = "0.17.0"
winit = "0.28.6"
